// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input add className 1`] = `
.lights-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  display: block;
  height: 32px;
  padding: 3px 5px;
  width: 100%;
}

.lights-0::-webkit-input-placeholder {
  color: #e6e6e6;
}

.lights-0::-moz-placeholder {
  color: #e6e6e6;
}

.lights-0:-ms-input-placeholder {
  color: #e6e6e6;
}

.lights-0::placeholder {
  color: #e6e6e6;
}

<input
  className="lights-0 foo"
  defaultValue=""
  onChange={[Function]}
  type="text"
/>
`;

exports[`Input empty 1`] = `
.lights-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  display: block;
  height: 32px;
  padding: 3px 5px;
  width: 100%;
}

.lights-0::-webkit-input-placeholder {
  color: #e6e6e6;
}

.lights-0::-moz-placeholder {
  color: #e6e6e6;
}

.lights-0:-ms-input-placeholder {
  color: #e6e6e6;
}

.lights-0::placeholder {
  color: #e6e6e6;
}

<input
  className="lights-0"
  defaultValue=""
  onChange={[Function]}
  type="text"
/>
`;
